--- a/css/main.css
+++ b/css/main.css
@@ -1,105 +1,39 @@
-:root {
-  --cell-size: min(12vmin, 100px);
-  --cell-gap: 0.5vmin;
-}
-
 body {
-  margin: 0;
-  padding: 2vh 0;
-  background-color: #333333;
-  color: #e1dedebb;
-  font-family: sans-serif;
+  background-color: gainsboro;
+  font-family: system-ui, sans-serif;
   text-align: center;
-  min-height: 100vh;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23514f4f' fill-opacity='0.4'%3E%3Cpath opacity='.5' d='M96 95h4v1h-4v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4h-9v4h-1v-4H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15v-9H0v-1h15V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h9V0h1v15h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9h4v1h-4v9zm-1 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-10 0v-9h-9v9h9zm-9-10h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm10 0h9v-9h-9v9zm9-10v-9h-9v9h9z'/%3E%3Cpath d='M6 5V0H5v5H0v1h5v94h1V6h94V5H6z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  margin: 0;
+  padding-top: 20px;
 }
 
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2vh;
+h1,
+h2 {
+  margin: 10px 0;
 }
 
-h1 {
-  font-size: clamp(2rem, 4vw, 3rem);
-  text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-  border-bottom: 1px solid rgba(255,255,255,0.1);
-  color: #d6d6d6;
-  margin: 0.5em 0;
-  padding-bottom: 0.3em;
+.board {
+  width: 350px;
+  margin: 20px auto;
 }
 
-.game-board {
-  background-color: #888;
-  padding: 4px;
-  border-top: 2px solid #bcbcbc;
-  border-left: 2px solid #bcbcbc;
-  border-bottom: 2px solid #2c2c2c;
-  border-right: 2px solid #2c2c2c;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.6);
-  display: inline-flex;
-  flex-direction: column;
-  gap: var(--cell-gap);
-}
-
-.row {
-  display: flex;
-  gap: var(--cell-gap);
-}
-
-.cell {
-  width: var(--cell-size);
-  height: var(--cell-size);
-  background-color: #999;
-  border-top: 2px solid #bcbcbc;
-  border-left: 2px solid #bcbcbc;
-  border-bottom: 2px solid #2c2c2c;
-  border-right: 2px solid #2c2c2c;
-  box-sizing: border-box;
-  cursor: pointer;
-  font-size: calc(var(--cell-size) * 0.6);
-  color: #222;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  user-select: none;
-}
-
-.cell:hover {
-  background-color: #aaa;
-}
-
-#game-status {
-  font-size: clamp(1rem, 2.5vw, 1.5rem);
-  margin-top: 1em;
-  color: #d6d6d6;
-}
-
-.home-link {
+.sqr {
+  width: 100px;
+  height: 100px;
   display: inline-block;
-  margin-top: 1em;
-  padding: 8px 16px;
-  background-color: #555;
-  color: #fff;
-  text-decoration: none;
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.5);
+  border: 2px solid black;
+  font-size: 64px;
+  text-align: center;
+  line-height: 100px;
+  vertical-align: top;
+  background-color: white;
+  margin: 5px 0;
 }
 
-.home-link:hover {
-  background-color: #444;
-}
-
-#ga-logo {
-  position: fixed;
-  bottom: 1rem;
-  right: 1rem;
-  width: 40px;
-  opacity: 0.3;
-  transition: opacity 0.3s ease;
-}
-
-#ga-logo:hover {
-  opacity: 0.6;
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: white;
+  border: 2px solid black;
+  cursor: pointer;
 }
